Update dependencies and refactor stuff (#2)
* Update dependencies

Update pom dependencies to support java 11 and add junit 5 with test example

* Add mockito

* Use CommandLineRunner interface in dataloader, update postman collection

* Use constructor injection in controllers

* Use constructor injection in UserService

* Remove unused Exceptions

* Extract email/username check logic to service

* Remove unused criteriaQuery from userSpecification

* Clean PostSpecification

* Update circleci conf